# odrive_ros

./: CHANGELOG  CMakeLists.txt  LICENSE  README.md  odrive_interface.py  odrive_node.py  package.xml  setup.py
launch/: odrive.launch
nodes/: odrive_node
src/odrive_ros/: __init__.py  odrive_interface.py  odrive_node.py  odrive_serial.py  odrive_simulator.py
