<?xml version="1.0"?>
<package format="2">
  <name>odrive_ros</name>
  <version>0.3.1</version>
  <description>ODrive motor controller driver for ROS</description>
  <license>Modified BSD</license>

  <maintainer email="josh.marshall@tecevo.com">Josh Marshall, Tecevo</maintainer>
  <url type="website">https://github.com/neomanic/odrive_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>ODrive</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
